fix: iOS browsers does not recognize overflow-y: auto on dynamically show .filters-wrapper
On iOS devices, upon toggling the filters settings, the user has to interact with an element inside the .filters-wrapper before the browser recognizes that .filter-wrapper is scrollable (i.e overflow-y: auto). So I added the vendor prefix -webkit-overflow-scrolling: touch; to hopefully resolve this issue.

--- a/src/style/pages/_find-match.scss
+++ b/src/style/pages/_find-match.scss
@@ -225,6 +225,7 @@
       height: 100%;
       top: 0;
       border-radius: 2rem;
+      -webkit-overflow-scrolling: touch; // Enable proper scrolling on iOS
       @include m.media-query(mobile-find-match) {
         border-radius: 0;
       }
